Fix calendar icon not centered.

--- a/themes/SuiteP/css/suitep-base/suitepicon.scss
+++ b/themes/SuiteP/css/suitep-base/suitepicon.scss
@@ -8,7 +8,6 @@
 }
 
 .suitepicon {
-    line-height: 1;
     vertical-align: middle;
 }
 
